# sail-riscv

./: .gitignore  Makefile  result  run_simulator.sh  run_test.sh
c_emulator/: riscv_config.h  riscv_platform.c  riscv_platform.h  riscv_platform_impl.c  riscv_platform_impl.h  riscv_prelude.c  riscv_prelude.h  riscv_sail.h  riscv_sim copy.c  riscv_sim.c  riscv_test.c
c_emulator/Cache/: Makefile  riscv_cache.c  riscv_cache.cpp  riscv_cache.h  riscv_cache_type.c  riscv_cpp_test.cpp  riscv_cpp_test.h  simulator_cache_api.h
c_emulator/Cache/src/Instruction/: instruction.cpp  instruction.h  instruction_api.cpp  instruction_api.h  instruction_pool.h
c_emulator/Cache/src/main_cache/: riscv_cache.h  riscv_cpp_test.cpp  riscv_cpp_test.h
c_emulator/Cache/src/pipeline/: pipeline.h  simple_pipeline.cpp  simple_pipeline.h  simple_pipeline_api.cpp  simple_pipeline_api.h  simple_pipeline_unit.h  simple_pipeline_unit_base.h  simple_pipeline_unit_concept.h
c_emulator/Cache/src/pipeline/inorder/: pipeline.h
c_emulator/Perf/: CMakeLists.txt  Makefile  perf_api.h
c_emulator/Perf/build-scripts/: build.sh  configure.sh  rebuild.sh  test.sh
c_emulator/Perf/doc/: ARCHITECTURE.md  README.md
c_emulator/Perf/model_interface/: CMakeLists.txt  perf_model.cpp  perf_model.h
c_emulator/Perf/src/: CMakeLists.txt
c_emulator/Perf/src/Board/Concept/: BoardConcept.h  SimpleBoardConcept.h
c_emulator/Perf/src/Clock/: ClockConcept.h
c_emulator/Perf/src/Clock/Concept/: ClockConcept.h
c_emulator/Perf/src/Clock/MinimalClock/: MinimalClock.h
c_emulator/Perf/src/Core/Concept/: CoreConcept.h
c_emulator/Perf/src/Core/MinimalCore/: MinimalCore.h
c_emulator/Perf/src/Instruction/: Instruction.h  InstructionPool.h  instruction.h  instruction_pool.h
c_emulator/Perf/src/pipeline/: clock.h  execution_unit.cpp  execution_unit.h  flush_policy.h  latency_log.h  pipeline.cpp  pipeline.h  pipeline_unit.cpp  pipeline_unit.h  simple_execution_unit.cpp  simple_execution_unit.h  simple_pipeline.cpp  simple_pipeline.h  simple_pipeline_api.cpp  simple_pipeline_api.h  simple_pipeline_unit.cpp  simple_pipeline_unit.h  simple_pipeline_unit_concept.h  stall_policy.h
c_emulator/Perf/src/pipeline/branch_pred/: bht.h  branch_pred.h  btb.h
c_emulator/Perf/src/pipeline/simple_cache/: cache.h
c_emulator/Perf/src/pipeline/simple_cache/replacement_policy/: Tree-PLRU.h
c_emulator/Perf/src/speculation/: functional.h
c_emulator/Perf/test/: CMakeLists.txt
c_emulator/Perf/test/Board/: CMakeLists.txt
c_emulator/Perf/test/Board/Concept/: board_concept_test.cpp  simple_board_concept_test.cpp
c_emulator/Perf/test/Clock/: CMakeLists.txt  clock_concept_test.cpp
c_emulator/Perf/test/Clock/Concept/: clock_concept_test.cpp
c_emulator/Perf/test/Clock/MinimalClock/: minimal_clock_test.cpp
c_emulator/Perf/test/Core/: CMakeLists.txt
c_emulator/Perf/test/Core/Concept/: core_concept_test.cpp
c_emulator/Perf/test/Core/MinimalCore/: minimal_core_test.cpp
model/: prelude.sail  prelude_mem.sail  riscv_branch_predictor.sail  riscv_cache.sail  riscv_cache_base.sail  riscv_cache_types.sail  riscv_decode_ext.sail  riscv_fetch.sail  riscv_fetch_rvfi.sail  riscv_history.sail  riscv_history_type.sail  riscv_insts_base.sail  riscv_insts_mext.sail  riscv_insts_zicsr.sail  riscv_jalr_rmem.sail  riscv_jalr_seq.sail  riscv_memoryAccess.sail  riscv_pipeline_api.sail  riscv_platform.sail  riscv_reg_type.sail  riscv_regs.sail  riscv_step.sail  riscv_step_common.sail  riscv_step_ext.sail  riscv_syscall.sail  riscv_types.sail  riscv_writeBack.sail
rv64im-test/: gen_results.py  gen_specific_results.py  run_simulator.sh
rv64im-test/mibenchim_output/automotive/basicmath/: basicmath_small
rv64im-test/mibenchim_output/automotive/bitcount/: bitcnts
rv64im-test/mibenchim_output/security/sha/: sha
rv64im-test/mibenchim_output/telecomm/CRC32/: crc
rv64im-test/mibenchim_output/telecomm/adpcm/: rawdaudio
rv64im-test/polyim_output/: 2mm  adi  bicg  cholesky  correlation  covariance  durbin  fdtd-2d  floyd-warshall  gesummv  gramschmidt  jacobi-2d  mvt  seidel-2d  symm  syr2k  trisolv
testbench/: makefile
testbench/mibench/automotive/qsort/: qsort_small
testbench/mibench/automotive/susan/: susan
testbench/mibench/network/dijkstra/: dijkstra_small
testbench/mibench/office/stringsearch/: search_large  search_small
testbench/mibench/security/rijndael/: rijndael  t
testbench/mibench/telecomm/CRC32/: t
testbench/mibench/telecomm/FFT/: fft  t
testbench/mibench/telecomm/adpcm/: rawcaudio  t
testbench/mibench_inputs/: output_small.dec  output_small.enc
testbench/polybench/: 3mm  atax  deriche  doitgen  gemm  gemver  heat-3d  jacobi-1d  lu  ludcmp  nussinov  syrk  trmm
testbench/readme/: readme.txt  測資修改以及問題.pptx
testbench/readme/syscall 測試/: command_test.riscv  file_test.riscv  gettime_test.riscv  gettimeofday_test.riscv  printf_test.riscv  scanf_test.riscv  times_test.riscv
testbench/readme/syscall 測試/tests/: command_test.c  file_test.c  gettime_test.c  printf_test.c  scanf_test.c  times_test.c
testbench/run_scripts/: gen_detail.py  gen_results.py  run_mibench.sh  run_polybench.sh
